tests/invalid/generated_binop_floordiv_str_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: bytes = b"hello"
    z = x // y
